# 3D-Lidar-ETL-Analysis

./: .gitignore  README.md  kitti_3d_dataset.md
preprocessing/: README.md  capture_pcap.sh  main.ipynb  main.py
preprocessing/pcap_info/: config.py  pcap_info.py  raw_pcap_info.md
preprocessing/pcap_parser/: environment.yml  pcap_parser.py  point_cloud.py  read_pcap.ipynb  transforms.py  utils.py
preprocessing/velo_parser/: main.py  manager.py  params.yaml  requirements.txt  utils.py  vlp_16.py
ros_modules/: README.md
ros_modules/catkin_python/src/oedr/: CMakeLists.txt  package.xml
ros_modules/catkin_python/src/oedr/scripts/: publisher_node.py  subscriber_node.py
ros_modules/vlp16_ws/: README.md  Velodyne-ROS2.md  Vlp-16-ROS2.md
ros_modules/vlp16_ws/src/pcap2pcd_py/: package.xml  setup.cfg  setup.py
ros_modules/vlp16_ws/src/pcap2pcd_py/pcap2pcd_py/: hw_status_pub.py  pcap_reader.py  sum_client.py  sum_server.py  test_pub.py  test_pub_params.py  test_sub.py
ros_modules/vlp16_ws/src/pcd_converter_cpp/: CMakeLists.txt  package.xml
ros_modules/vlp16_ws/src/pcd_converter_cpp/src/: pcd_converter.cpp
ros_modules/vlp16_ws/src/point_cloud_interfaces/: CMakeLists.txt  package.xml
ros_modules/vlp16_ws/template/: launchfile.py  node.cpp  node.py
transforms/: README.md  txt2bin.py
visualization/: README.md  Visualize.ipynb
